kube-config/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: short-api
        image: antonlarichev/short-api:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        volumeMounts:
          - name: test
            mountPath: /etc/test
            readOnly: true
        livenessProbe:
          exec:
            command:
              - curl
              - --fail
              - http://localhost:3000/api
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 1
        readinessProbe:
          exec:
            command:
              - curl
              - --fail
              - http://localhost:3000/api
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5
      volumes:
        - name: test
          configMap:
            name: demo-config
