kube-config/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: conv-app
        image: antonlarichev/short-app:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
