kube-config/conv-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    name: conv-app
spec:
  containers:
  - name: conv-app
    image: antonlarichev/short-app:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
