kube-config/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "300Mi"
            cpu: "300m"
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
            subPath: postgres
        ports:
        - containerPort: 5432
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
