kube-config/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-clasterip
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 80
    protocol: TCP
