kube-config/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clasterip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
