kube-config/conv-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app
spec:
  type: NodePort
  selector:
    name: conv-app
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31200
