kube-config/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clasterip
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
